@@ -12,7 +12,7 @@ package Win32::API::Type;
 #
 #######################################################################
 
-$VERSION = '0.61';
+$VERSION = '0.62';
 
 use Carp;
 use Config;
